--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ plugins {
     id 'idea'
     id 'net.minecraftforge.gradle' version '[6.0,6.2)'
     id 'org.parchmentmc.librarian.forgegradle' version '1.+'
+    id 'org.spongepowered.mixin' version '0.7.+'
 }
 
 apply plugin: 'org.spongepowered.mixin'
@@ -162,18 +163,11 @@ dependencies {
     // then special handling is done to allow a setup of a vanilla dependency without the use of an external repository.
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 
-    implementation fg.deobf('vazkii.botania:Botania:1.19.2-439-FORGE')
-    implementation fg.deobf('vazkii.patchouli:Patchouli:1.19.2-77')
-    implementation fg.deobf('top.theillusivec4.curios:curios-forge:1.19.2-5.1.4.0')
+    implementation fg.deobf("curse.maven:botania-225643:4900327")
+    implementation fg.deobf("curse.maven:patchouli-306770:4966125")
+    implementation fg.deobf("curse.maven:curios-309927:4960408")
 
-    implementation fg.deobf("mezz.jei:jei-1.19.2-common-api:11.6.0.1015")
-    implementation fg.deobf("mezz.jei:jei-1.19.2-forge-api:11.6.0.1015")
-    runtimeOnly fg.deobf("mezz.jei:jei-1.19.2-forge:11.6.0.1015")
-
-
-    implementation fg.deobf("curse.maven:kubejs-238086:4744432")
-    implementation fg.deobf("curse.maven:rhino-416294:4715267")
-    implementation fg.deobf("curse.maven:architectury-api-419699:4555749")
+    implementation fg.deobf("curse.maven:jei-238222:4712868")
 
     // Example mod dependency with JEI - using fg.deobf() ensures the dependency is remapped to your development mappings
     // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
